# ISRPO-CI-CD

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
include/: rectangle.h
src/: main.cpp  rectangle.cpp
tests/: test_rectangle.cpp
